# gridness

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  PROBLEM.md  README.md  REPORT.md  pyproject.toml
data/: comparison_table.csv
data/fixtures/: city_768.buildings.txt  city_768.txt  four_districts_512.buildings.txt  four_districts_512.txt  grid_768.buildings.txt  grid_768.txt  grid_uniform_256.buildings.txt  grid_uniform_256.txt  longhouses_12x100.buildings.txt  longhouses_12x100.txt  longhouses_12x60.buildings.txt  longhouses_12x60.txt  longhouses_22x100.buildings.txt  longhouses_22x100.txt  longhouses_22x60.buildings.txt  longhouses_22x60.txt  mega_in_grid_256.buildings.txt  mega_in_grid_256.txt  scattered_256.buildings.txt  scattered_256.txt  two_districts_256x512.buildings.txt  two_districts_256x512.txt
data/fixtures_heatmaps_java/: city_768.heatmap.txt  four_districts_512.heatmap.txt  grid_768.heatmap.txt  grid_uniform_256.heatmap.txt  longhouses_12x100.heatmap.txt  longhouses_12x60.heatmap.txt  longhouses_22x100.heatmap.txt  longhouses_22x60.heatmap.txt  mega_in_grid_256.heatmap.txt  scattered_256.heatmap.txt  two_districts_256x512.heatmap.txt
data/fixtures_layouts/: dense_grid.txt  hexagonal.txt  (+25 more)
experiments/: log.jsonl
java/: BENCHMARK.md  README.md  build.gradle.kts  env.sh  settings.gradle.kts
scripts/: check_extract.py  compare_algos.py  compare_four_cols.py  compare_heatmaps.py  compare_heatmaps_java_vs_python.py  compare_original_layouts.py  convert_layouts_to_fixtures.py  generate_dataset.py  generate_fixtures.py  run_experiment.py  sweep_java_params.py
(+763 files in other folders)
